feat[0.2.0]: integrate Databuddy SDK for analytics

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@databuddy/sdk": "^2.3.29",
     "@phosphor-icons/react": "^2.1.10",
     "next": "latest",
     "react": "^18",
